# fastapi-patterns-lab

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  justfile  log-config.yaml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: dispatching.md  index.md  lifespan.md
docs/patterns/: dispatching.md  lifespan.md
docs/reference/: dispatching.md  lifespan.md
src/fastapi_patterns/: __init__.py  dispatching.py  lifespan.py  utilities.py
src/fastapi_webhook/: __init__.py  entrypoints.py  github.py  lifespan.py  meta.py  pagerduty.py  processor.py  utilities.py
