[project]
name = "fastapi-patterns-lab"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi~=0.135.3",
  "httpx>=0.28.1",
  "keyring>=25.7.0",
  "opentelemetry-distro>=0.62b0",
  "opentelemetry-instrumentation-asyncio>=0.62b0",
  "opentelemetry-instrumentation-fastapi>=0.62b0",
  "opentelemetry-sdk~=1.41.0",
  "pydantic~=2.13",
  "pydantic-settings~=2.13",
  "typer>=0.21.1",
  "uvicorn[standard]~=0.44.0",
  "yarl>=1.23.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pre-commit>=4.5.1",
  "ruff~=0.14.14",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_patterns"]

[tool.mypy]
strict = true
python_version = "3.14"
enable_error_code = "exhaustive-match"

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ISC",
  "LOG",
  "N",
  "PIE",
  "PL",
  "PTH",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W"
]
ignore = [
  "RSE102",  # I like to raise exception instances not classes
  "TC003",  # This doesn't work with pydantic
  "TRY003",  # Allow messages in exception initializers
]
pydocstyle = { convention = "google" }
isort = { split-on-trailing-comma = false }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
